Added notifier.rb and using eventbus, but not worked :(

--- a/mysample/realtime_db_sync/Makefile
+++ b/mysample/realtime_db_sync/Makefile
@@ -1,8 +1,17 @@
 
 MDB_URL=http://localhost:8081
+NTF_URL=http://localhost:8080
+
+m:
+	vertx run masterdb.rb
+
+n:
+	vertx run notifier.rb
 
 put:
 	curl  --data-ascii 'values={"key1":"value1","key2":"value2"}' ${MDB_URL}/putValues
 
+wait:
+	curl  ${NTF_URL}/ 
 
 
