use memcached for event bus. Problem: notifier can only response for single client.

--- a/mysample/realtime_db_sync/Makefile
+++ b/mysample/realtime_db_sync/Makefile
@@ -1,17 +1,16 @@
 
 MDB_URL=http://localhost:8081
 NTF_URL=http://localhost:8080
+USERNAME='user1'
 
 m:
-	vertx run masterdb.rb
+	vertx run    masterdb.rb -instance 2
 
 n:
-	vertx run notifier.rb
+	vertx run    notifier.rb -instance 4
 
 put:
-	curl  --data-ascii 'values={"key1":"value1","key2":"value2"}' ${MDB_URL}/putValues
+	curl  --data-ascii 'values={"key1":"value1","key2":"value2"}' ${MDB_URL}/putValues?username=${USERNAME}
 
 wait:
-	curl  ${NTF_URL}/ 
-
-
+	curl  ${NTF_URL}/?username=${USERNAME}
