Added clientdb.rb Changed Web APIs

--- a/mysample/realtime_db_sync/Makefile
+++ b/mysample/realtime_db_sync/Makefile
@@ -1,7 +1,8 @@
 
 MDB_URL=http://localhost:8081
 NTF_URL=http://localhost:8080
-USERNAME='user1'
+USERNAME_A='userA'
+USERNAME_B='userB'
 
 m:
 	vertx run    masterdb.rb -instance 2
@@ -9,8 +10,18 @@ m:
 n:
 	vertx run    notifier.rb -instance 4
 
-put:
-	curl  --data-ascii 'values={"key1":"value1","key2":"value2"}' ${MDB_URL}/putValues?username=${USERNAME}
 
-wait:
-	curl  ${NTF_URL}/?username=${USERNAME}
+insertA1:
+	curl  --data-ascii 'kv={"1337697112:6f96cfdfe5ccc627cadf24b41725caa4" : "hello"}'  ${MDB_URL}/insertValue?username=${USERNAME_A}
+
+insertA2:
+	curl  --data-ascii 'kv={"1337697249:e358efa489f58062f10dd7316b65649e" : "Vert.x"}' ${MDB_URL}/insertValue?username=${USERNAME_A}
+
+syncA:
+	ruby clientdb.rb  ${USERNAME_A}
+
+syncB:
+	ruby clientdb.rb  ${USERNAME_B}
+
+insertB1:
+	curl  --data-ascii 'kv={"1337697513:e358efa489f58062f10dd7316b65649e" : "World"}' ${MDB_URL}/insertValue?username=${USERNAME_B}
