--- a/mysample/realtime_db_sync/Rakefile
+++ b/mysample/realtime_db_sync/Rakefile
@@ -38,5 +38,6 @@ task :default => [:test] do
 end
 
 task :test do
+  sh "rm -f /tmp/libdb.db"
   sh "time ruby -I ./lib `which rspec` -b   ./test/libdb_spec.rb          -r ./test/rspec_formatter_for_emacs.rb -f CustomFormatter"
 end
