--- a/mysample/realtime_db_sync/Rakefile
+++ b/mysample/realtime_db_sync/Rakefile
@@ -40,4 +40,5 @@ end
 task :test do
   sh "rm -f /tmp/libdb.db"
   sh "time ruby -I ./lib `which rspec` -b   ./test/libdb_spec.rb          -r ./test/rspec_formatter_for_emacs.rb -f CustomFormatter"
+  sh "time ruby -I ./lib `which rspec` -b   ./test/libutil_spec.rb        -r ./test/rspec_formatter_for_emacs.rb -f CustomFormatter"
 end
