--- a/mysample/realtime_db_sync/Rakefile
+++ b/mysample/realtime_db_sync/Rakefile
@@ -9,9 +9,15 @@
 #   5. rake release
 #   6. gem push pkg/realtimedbsync-x.x.x.gem   ( need gem version 1.3.6 or higer. Please "gem update --system" to update )
 
+MDB_URL='http://localhost:8081'
+NTF_URL='http://localhost:8080'
+USERNAME_A='userA'
+USERNAME_B='userB'
+
+
 require 'rake'
 begin
-  require 'jeweler2e'
+  require 'jeweler2'
   Jeweler::Tasks.new do |gemspec|
     gemspec.name = "RealtimeDbSync"
     gemspec.summary = "RealtimeDbSync is a dialect of Lisp."
@@ -42,3 +48,27 @@ task :test do
   sh "time ruby -I ./lib `which rspec` -b   ./test/libdb_spec.rb          -r ./test/rspec_formatter_for_emacs.rb -f CustomFormatter"
   sh "time ruby -I ./lib `which rspec` -b   ./test/libutil_spec.rb        -r ./test/rspec_formatter_for_emacs.rb -f CustomFormatter"
 end
+
+task :m do
+  sh "vertx run    masterdb.rb -instance 2"
+end
+
+task :n do
+  sh "vertx run    notifier.rb -instance 4"
+end
+
+task :syncA do
+  sh "ruby -I ./lib bin/clientSync  #{USERNAME_A}"
+end
+
+task :syncB do
+  sh "ruby -I ./lib bin/clientSync  #{USERNAME_B}"
+end
+
+task :insertA1 do
+  sh "curl  --data-ascii \'kv={\"1337697112:6f96cfdfe5ccc627cadf24b41725caa4\" : \"hello\"}\'  #{MDB_URL}/insertValue?username=#{USERNAME_A}"
+end
+
+
+
+
