--- a/mysample/realtime_db_sync/Rakefile
+++ b/mysample/realtime_db_sync/Rakefile
@@ -50,11 +50,11 @@ task :test do
 end
 
 task :m do
-  sh "vertx run    masterdb.rb -instance 2"
+  sh "vertx run    server/masterdb.rb -instance 2"
 end
 
 task :n do
-  sh "vertx run    notifier.rb -instance 4"
+  sh "vertx run    server/notifier.rb -instance 4"
 end
 
 task :syncA do
